--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tmp-cpa",
+  "name": "tmp-cpa2",
   "version": "1.0.0",
   "private": true,
   "description": "Plasmic app for sjVjhDwAwAnzPPjTJm6wuM",
