Fathym setup and configured GitHub action

--- a/.github/workflows/lcu-github-artifacts-release.yml
+++ b/.github/workflows/lcu-github-artifacts-release.yml
@@ -14,8 +14,8 @@ env:
   MainBranch: main
   NPMRegistry: https://registry.npmjs.org/
   InstallCommand: npm i
-  BuildCommand: npm run export
-  Output: ./out
+  BuildCommand: npm run build
+  Output: ./public
 
 jobs:
   build:
